Fixing iPhone issue with stretching img

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ ul li {
 
 .l1-img {
   display: inline-block;
+  height: 100%;
   margin: 20px;
   border: 9px double var(--primary-color);
   border-radius: 99px;
